--- a/app/views/articles/read.rhtml
+++ b/app/views/articles/read.rhtml
@@ -17,12 +17,13 @@
   <%= link_to("edit", { :controller => "admin/content", :action => "edit", :id => @article },
         :class => "admintools", :style => "display: none", :id => "admin_article") %>
   <h2><%= @article.title %></h2>
-  <p class="auth">Posted by <% if config[:link_to_author] and @article.user and @article.user.email.to_s.size>0 -%>
+  <p class="auth"><!--Posted by <% if config[:link_to_author] and @article.user and @article.user.email.to_s.size>0 -%>
     <a href="mailto:<%=h @article.user.email %>"><%=h @article.user.name %></a>
   <% else -%>
     <%=h @article.author %>
   <% end -%>
-  <%= js_distance_of_time_in_words_to_now @article.created_at.utc %></p>
+  -->
+  <%= date @article.created_at.utc %></p>
   <%= @article.full_html %>
 </div>
 
@@ -45,7 +46,9 @@
 
 <p class="postmetadata alt">
   <small>
+  <!--
   <a href="<%= xml_url(:action=>'articlerss', :id=>@article) %>" title="RSS Feed">RSS feed for this post</a>
+  -->
   <a href="<%= server_url_for :controller=>"articles", :action=>"trackback", :id=>@article.id %>">trackback uri</a>  
   </small>
 </p>
