Fix after update to typo 2.5.5
git-svn-id: file:///home/matijs/.svk/typo/local/trunk@674 3b2ea118-c802-0410-a64b-92752010ce07

--- a/app/views/articles/_article.rhtml
+++ b/app/views/articles/_article.rhtml
@@ -1,11 +1,6 @@
 <a name="<%= article.id %>" />
 <h2><%= article_link article.title, article %></h2>
-<p class="auth"><!--Posted by 
-  <% if config['link_to_author'] and article.user and article.user.email.to_s.size>0 -%>
-    <a href="mailto:<%=h article.user.email %>"><%= article.user.name %></a>
-  <% else -%>
-    <%=h article.author %>
-  <% end -%>
+<p class="auth"><!--Posted by <%= author_link(article) %>
   -->
 <%= date article.created_at %></p>
 <%= article.body_html %>
