--- a/themes/passepartout/stylesheets/passepartout.css
+++ b/themes/passepartout/stylesheets/passepartout.css
@@ -1,14 +1,229 @@
-/* Import passepartout style sheet */
-@import url(/2005/01/10/passepartout_style/sheet.css);
+/*
+ * Passepartout style for matijs.net
+ * Copyright 2004-2005 Matijs van Zuijlen
+ * http://www.matijs.net/
+ */
+/*
+ * This design is supposed to create the effect of text surrounded by a
+ * passepartout. Thus, there is a (gray) `central area' containing the main
+ * text, and this area is surrounded by four `borders'. There are no css
+ * borders in this design, so in the following `borders' refers to the
+ * parts of the passepartout.
+ *
+ * DIMENSIONS
+ * 
+ * The background images are all 800px wide. Vertical edges occur at 25px,
+ * 90px, 560px, 775px. Left border is 65px, central area is 470px, right
+ * border is 215px.
+ *
+ * The body background is 300px high to get a non-trivial repetition of the
+ * paper texture.
+ *
+ * The top and bottom images are each 125px high. For these images,
+ * horizontal edges occur at 30px and 95px.
+ *
+ * The dark rectangle in the top image has a bottom edge at 110px.
+ */
+html {
+  /* background is centered to line it op with the pattern on the frame */
+  background: url(../../images/theme/paper_dark.png) top center;
+  margin: 0px;
+  padding: 0px;
+}
+body {
+  color: #555;
+  /* IE 5.5 seems to make the body as wide as the window. Also, since it
+   * doesn't support centering the body, the contents of body will be
+   * against the left edge of the window. So, we must make the background
+   * align left. In better browsers, this is not different from center,
+   * since the body is as wide as the image. */
+  background: url(../../images/theme/body_bg.png) top left repeat-y;
+
+  width: 800px; /* background image has this width */
+  padding: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  /*
+   * BROWSER HACKS HERE:
+   * REASON: IE 5.5 and lower do not support margin: auto, so hide it.
+   * - shut off netscape 4[4]
+   * - shut off IE (up to 5.5) (2 lines)[5]
+   * - turn on netscape 4?
+   * - set margin
+   */
+  /*/*/
+  voice-family: "\"}\"";
+  voice-family: inherit;
+  /* welcome back netscape */
+  margin: 0px auto;
+}
+/* Be nice to Opera 5[5] */
+html>body p.copyright {
+  margin: 0px auto;
+}
+
+div.contents {
+  background: url(../../images/theme/top_bg.png) top left no-repeat;
+  font-family: sans-serif;
+  padding: 0px;
+  margin: 0px;
+  height: 100%;
+}
+
+/* Text in central grey area. 20px padding to inner edge of border. */
+div.main {
+  float: left;
+  display: inline; /* Fix IE margin-doubling bug[3] */
+  color: #000;
+
+  width: 430px; /* 470px - 2 x padding. */
+  padding: 0px;
+
+  margin-bottom: 0px; /* For padding against p.copyright. */
+  margin-left: 110px; /* Edge at 90px, plus 20px padding */
+  margin-right: 0px;
+  /*
+   * BROWSER HACKS HERE:
+   * IE 6 (and before?) collapses the first child element's margin with
+   * this float's padding. So add some to this padding. Then, use a child
+   * selector rule to set it correctly for non-IE browsers.
+   */
+  margin-top: 115px; /* Edge at 95px, plus 20px padding */
+}
+div>div.main {
+  margin-top: 95px; /* Edge at 95px, padding done by text itself */
+}
+
+/* Text in right border. 25px padding to sides of border. */
+div.places {
+  font-size: 80%;
+
+  width: 165px; /* 215px - 2 x padding */
+  /* We need to do the vertical spacing with padding, since the margin
+   * collapses with the body's margin, and we'll end up moving the top image
+   * down, as well as the float.
+   * */
+  padding-top: 110px; /* Edge at 95px, padding done by text itself */
+  padding-bottom: 0px; /* For padding against p.copyright. */
+  padding-left: 0px;
+  padding-right: 0px;
+
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 585px; /* edge at 560px, plus padding. Use this instead of
+		       * auto to make IE stop being silly. */
+  /* This right margin follows from the settings above. Leaving it in makes
+   * IE think it's too wide to display next to the float */
+  /* margin-right: 50px; */ /* 25px padding, plus 25px to right edge of image. */
+}
+h2, h3, h4, h5, h6 {
+  color: #c20;
+  font-weight: normal;
+}
+
+/* h1 is a box that starts at the left edge of the main column, and ends at
+ * the right edge of the places column. Its baseline is 25px above the
+ * bottom of the top border. */
+h1 {
+  color: #000;
+  font-weight: normal;
+  position: absolute;
+  top: 0px;
+  left: auto; /* Stay where we are */
+  text-align: right;
+  width: 630px; /* 800px - 110px - 60px; */
+  background: transparent;
+
+  line-height: 0px;
+  padding-top: 70px; /* 95px - 25px */
+  padding-bottom: 40px; /* Give text room in IE to grow to the bottom edge
+			 * of the dark rectangle */
+  margin: 0px;
+}
+
+/* This text is also in central grey area. 20px padding to inner edge of
+ * border. */
+p.copyright {
+  font-size: 70%;
+  text-align: right;
+  clear: both;
+  background: url(../../images/theme/bot_bg.png) bottom left no-repeat;
+  margin: 0px;
+  /* We have to use padding, since the background will not show up in the
+   * margin */
+  padding-top:	    2em; /* keep main float at bay; this won't work using
+			  * the margin[2]. */ 
+  padding-bottom: 115px; /* 20px to edge of border, plus 95px to lower edge
+			  * of picture */
+  padding-left:   110px; /* Edge at 90px, plus 20px padding */
+  padding-right:  260px; /* 20px padding, 215px border, 25px to edge of
+			  * picture */
+
+  /*
+   * BROWSER HACKS HERE:
+   * - shut off netscape 4[4]
+   * - set width for IE[5]
+   * - shut off IE (up to 5.5) (2 lines)
+   * - turn on netscape 4?
+   * - set correct width for non-IE browsers
+   */
+  /*/*/
+  width: 800px;
+  voice-family: "\"}\"";
+  voice-family: inherit;
+  /* welcome back netscape */
+  width: 430px;	/* Same width as main text */
+}
+/* Be nice to Opera 5[5] */
+html>body p.copyright {
+  width: 430px;	/* Same width as main text */
+}
+
+a {
+  color: black;
+}
+
+/* Blog-specific styles */
+
+div.comment, div.comment-box {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 0em;
+  margin-right: 0em;
+  /*background-color: #ddd;*/
+  border: 1px solid black;
+  padding: 0.1px 10px;
+}
+
+div.comment p, div.comment-box p {
+  margin-left: 0em;
+  margin-right: 0em;
+}
+textarea {
+  width: 400px;
+}
+
+
+/*
+ * FOOTNOTES:
+ * [1] I'm setting div.contents as the containing block. see
+ * <http://www.autisticcuckoo.net/archive.php?id=2004/12/07/relatively-absolute>.
+ * [2] This has to do with the exact effect of the clear property. See
+ * <http://www.autisticcuckoo.net/archive.php?id=2004/12/10/floating>. 
+ * [3] http://www.positioniseverything.net/explorer/doubled-margin.html
+ * [4] http://w3development.de/css/hide_css_from_browsers/more/
+ * [5] http://tantek.com/CSS/Examples/boxmodelhack.html, via
+ * http://w3development.de/css/hide_css_from_browsers/tantek/
+ */
 
 /* Stuff we forgot last time */
-.navigation {
+.places ul {
   list-style: none;
   margin: 0px;
   padding: 0px;
 }
 
-.navigation li {
+.places ul li {
   margin: 0px;
 }
 .places * {
@@ -68,6 +283,9 @@ a:hover { color: #85ab02; /* TODO: Color */}
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   padding: 0px;
+}
+li.author_comment {
+  border: 1px solid #AAF;
 }
 
 #comment_body { height: 220px; }
