--- a/themes/passepartout/views/articles/_comment_box.rhtml
+++ b/themes/passepartout/views/articles/_comment_box.rhtml
@@ -7,7 +7,7 @@
                     :html => {:id=>"commentform",:class=>"commentform"} %>
 
 
-<div class="commentform">
+<div class="comment-box">
   <div id="errors"></div>
   <div id="preview" style="display: none"></div>
 
