Update theme; use typo's standard permalinks
git-svn-id: file:///home/matijs/.svk/typo/local/trunk@897 3b2ea118-c802-0410-a64b-92752010ce07

--- a/themes/azure/layouts/default.rhtml
+++ b/themes/azure/layouts/default.rhtml
@@ -33,7 +33,7 @@
               <%= render_sidebars %>
             <% end %>
             
-            <%= link_to image_tag("powered.gif"),  "http://typo.leetsoft.com/", {:class => "powered" } %>
+            <%= link_to image_tag("powered.gif"),  "http://www.typosphere.org/", {:class => "powered" } %>
             </div>
 
             <br clear="all" />
