--- a/themes/passepartout/views/shared/_search.rhtml
+++ b/themes/passepartout/views/shared/_search.rhtml
@@ -9,4 +9,5 @@
     :url => { :controller => "live", :action => "search" }, 
     :loading => "Element.show('search_spinner')",
     :complete => "Element.hide('search_spinner')",
-    :update => "search-results" -%>
+    :update => "search-results",
+    :with => "'q=' + escape($F('q'))" -%>
