--- a/themes/passepartout/views/articles/frontpage.rhtml
+++ b/themes/passepartout/views/articles/frontpage.rhtml
@@ -16,7 +16,7 @@ their countries (such as <a
 <h2>Trivia</h2>
 
 <p>My computers run <a href="http://www.debian.org">Debian
-GNU/Linux</a></p>
+GNU/Linux</a>.</p>
 
 <p>You can take a look at a <a href="/picture">slightly outdated
 picture of me</a>.</p>
