--- a/themes/passepartout/views/articles/_frontbar.rhtml
+++ b/themes/passepartout/views/articles/_frontbar.rhtml
@@ -11,7 +11,7 @@
 
 <h2>Site</h2>
 <ul class="navigation">
-  <li>home</li>
+  <li><span class="nolink">home</span></li>
   <li><a href="/software/">software</a></li>
 
   <li><a
