Fixup feeds; add print sheet; Fixup layout;
git-svn-id: file:///home/matijs/.svk/typo/local/trunk@957 3b2ea118-c802-0410-a64b-92752010ce07

--- a/themes/passepartout/views/articles/frontpage.rhtml
+++ b/themes/passepartout/views/articles/frontpage.rhtml
@@ -1,5 +1,9 @@
 <h2>At this web site</h2>
 
+<h3>News</h3>
+
+<p>News and thoughts appear irregularly in my <a href="blog/">blog</a>.</p>
+
 <h3>Software</h3>
 
 <p>Some of the <a href="/software/">software I've written</a>.</p>
