--- a/themes/passepartout/views/articles/_comment.rhtml
+++ b/themes/passepartout/views/articles/_comment.rhtml
@@ -2,10 +2,10 @@
   <%= admin_tools_for comment %>
   <p>
   <a name="comment-<%= comment.id %>"></a>
-  <%= gravatar_tag(comment.email) if config_value(:use_gravatar) and comment.email %>
-  <cite><strong><%= (comment.url.blank?) ? h(comment.author) : link_to(h(comment.author), comment.url) %></strong> </cite> said <%= distance_of_time_in_words @article.created_at, comment.created_at %> later:
+  <%= gravatar_tag(comment.email) if this_blog.use_gravatar and comment.email %>
+  <cite><strong><%= link_to_unless(comment.url.blank?, h(comment.author), comment.url) %></strong> </cite> said <%= distance_of_time_in_words comment.article.published_at, comment.created_at %> later:
   </p>
   <div>
-  <%= comment_html(comment) %>
+  <%= comment.full_html %>
   </div>
 </li>
