--- a/themes/passepartout/views/articles/_comment_box.rhtml
+++ b/themes/passepartout/views/articles/_comment_box.rhtml
@@ -12,26 +12,33 @@
   <div id="preview" style="display: none"></div>
 
   <a name="respond"></a>
-  <p><label for="comment_author">Your name:</label>
-  <%= text_field "comment", "author", :size => 20 %> <small><%= link_to_function("(leave url/email &#187;)", "Element.toggle('guest_url'); Element.toggle('guest_email')") %></small>
-  </p>
-  <p id="guest_url" style="display:none;">
-  <label for="comment_url">Your URL:</label>
-  <%= text_field "comment", "url" %>
-  </p>
-  <p id="guest_email" style="display:none;">
-  <label for="comment_email">Your email:</label>
-  <%= text_field "comment", "email" %>
-  </p>
-  <p><label for="comment_body">Your message</label></p>
-  <p>
+
+
+      <p><label for="comment_author">Your name:</label>
+      <%= text_field "comment", "author", :size => 20 %> <small><%= link_to_function("(leave url/email &#187;)", "Element.toggle('guest_url'); Element.toggle('guest_email')") %></small>
+    </p>
+    <p id="guest_url" style="display:none;">
+      <label for="comment_url">Your URL:</label>
+      <%= text_field "comment", "url" %>
+    </p>
+    <p id="guest_email" style="display:none;">
+      <label for="comment_email">Your email:</label>
+      <%= text_field "comment", "email" %>
+    </p>
+    <p>
+      <label for="comment_body">Your message</label></p>
+      <p>
         <%= text_area "comment", "body" %>
-  </p>
-  <p>
-  <p id="frm-btns">
-  <input type="submit" name="submit" id="form-submit-button" value="submit" class="button" />&nbsp;&nbsp;
+      </p>
+    <p>
+    <p id="frm-btns">
+
+      <span id="comment_loading" style="display:none;"><%= image_tag "spinner.gif" %></span>
+      <%= markup_help_popup TextFilter.find_by_name(config[:comment_text_filter]), "Comment Markup Help" %>
       <a href="#" onclick="new Ajax.Updater('preview', '<%= url_for :action => 'comment_preview' %>',  {asynchronous:true, evalScripts:true, parameters:Form.serialize('commentform'), onComplete:function(request){Element.show('preview')}}); return false;">Preview comment</a>      
-  <span id="comment_loading" style="display:none;"><%= image_tag "spinner.gif" %></span>
-  </p>
+      <input type="submit" name="submit" id="form-submit-button" value="submit" class="button" />&nbsp;&nbsp;
+      </p>
+
+
 </div>
 <%= end_form_tag %>
