--- a/themes/passepartout/views/articles/read.rhtml
+++ b/themes/passepartout/views/articles/read.rhtml
@@ -4,10 +4,12 @@
        xmlns:dc="http://purl.org/dc/elements/1.1/">
 <rdf:Description
     rdf:about=""
+<% if @article.allow_pings? -%>
     trackback:ping="<%= server_url_for :controller=>"articles", :action=>"trackback", :id=>@article %>"
+<% end -%>
     dc:title="<%=h @article.title.gsub(/-+/, '-') %>"
     dc:identifier="<%= article_url(@article, false) %>"
-    dc:description="<%=h strip_html(article_html(@article)[0..255]).gsub(/-+/, '-') %>"
+    dc:description="<%=h strip_html(@article.full_html[0..255]).gsub(/-+/, '-') %>"
     dc:creator="<%= h @article.author %>"
     dc:date="<%= @article.updated_at.xmlschema %>" />
 </rdf:RDF>
@@ -18,16 +20,16 @@
         :class => "admintools", :style => "display: none", :id => "admin_article") %>
   <h2><%=h @article.title %></h2>
   <p class="auth">Posted by <%= author_link(@article) %>
-  <%= js_distance_of_time_in_words_to_now @article.created_at.utc %></p>
-  <%= article_html(@article) %>
+  <%= js_distance_of_time_in_words_to_now @article.published_at.utc %></p>
+  <%= @article.full_html %>
 </div>
 <p class="meta">
   <%= article_links @article %>
 </p>
 
 <% if @article.allow_comments? or @article.comments.size > 0 -%>
-  <a name="comments"></a><h4 class="blueblk">Comments</h4> 
-  <% if @article.allow_comments? -%>
+  <a name="comments"></a><h4 class="blueblk">Comments</h4>
+  <% unless @article.comments_closed? -%>
     <p class="postmetadata alt">
       <small><a href="#respond">Leave a response</a></small>
     </p>
@@ -36,7 +38,7 @@
   <% if @article.comments.blank? %>
     <li id="dummy_comment" style="display: none"></li>
   <% else %>
-    <%= render(:partial => "comment", :collection => @article.comments.to_a.select {|c| c.published? }) %>
+    <%= render(:partial => "comment", :collection => @article.published_comments) %>
   <% end %>
   </ol>
 <% end -%>
@@ -46,20 +48,22 @@
   <p>
     Use the following link to trackback from your own site:<br/>
     <span class="light-bg"><%= server_url_for :controller=>"articles", :action=>"trackback", :id=>@article.id %></span>
-    </p>    
+    </p>
   <%= content_tag(:ol,
-        render(:partial => "trackback", :collection => @article.trackbacks),
-        :id => 'trackbackList', :class => 'trackback-list') unless @article.trackbacks.blank? %>  
+        render(:partial => "trackback", :collection => @article.published_trackbacks),
+        :id => 'trackbackList', :class => 'trackback-list') unless @article.trackbacks.blank? %>
 <% end -%>
 
 <p class="postmetadata alt">
   <small>
   <a href="<%= xml_url :action=>'feed', :type=>'article', :format => 'atom10', :id => @article %>" title="Feed">feed for this post</a>
-  <a href="<%= server_url_for :controller=>"articles", :action=>"trackback", :id => @article.id %>" >trackback uri</a>  
+<% if @article.allow_pings? -%>
+  <a href="<%= server_url_for :controller=>"articles", :action=>"trackback", :id => @article.id %>" >trackback uri</a>
+<% end -%>
   </small>
 </p>
 
-<% if @article.allow_comments? -%>
+<% unless @article.comments_closed? -%>
   <%= render :partial => 'comment_box' %>
 <% else -%>
   <p>Comments are disabled</p>
