Add overflow support to pre elements
git-svn-id: file:///home/matijs/.svk/typo/local/trunk@1232 3b2ea118-c802-0410-a64b-92752010ce07

--- a/themes/passepartout/stylesheets/passepartout.css
+++ b/themes/passepartout/stylesheets/passepartout.css
@@ -223,6 +223,14 @@ a {
   color: black;
 }
 
+/* Make sure this doesn't overflow to the sides */
+pre {
+  overflow: auto;
+  border: solid #a5945a;
+  border-width: 1px 0px;
+  padding: 1em 0em;
+}
+
 /* Blog-specific styles */
 
 /*
