Fixup tests, make multi-blog setup work (good for testing!).
git-svn-id: file:///home/matijs/.svk/typo/local/trunk@1394 3b2ea118-c802-0410-a64b-92752010ce07

--- a/themes/passepartout/views/articles/_frontbar.rhtml
+++ b/themes/passepartout/views/articles/_frontbar.rhtml
@@ -1,12 +1,12 @@
 <h3>Recent Blog Entries</h3>
 <ul class="navigation">
 <% for article in @articles -%>
-<li><%= article_link h(article.title), article %></li>
+<li><%= link_to_permalink article, h(article.title) %></li>
 <% end -%>
 </ul>
 
 <p id="pagination">You can read
-	<%= link_to 'the rest of my blog here', { :controller => '/' } %>.
+	<%= link_to 'the rest of my blog here', { :controller => '/articles' } %>.
 </p>
 
 <h3>Site</h3>
