--- a/themes/passepartout/views/articles/_comment.rhtml
+++ b/themes/passepartout/views/articles/_comment.rhtml
@@ -6,7 +6,7 @@
   <cite><strong><%= link_to_unless(comment.url.blank?, h(comment.author), comment.url) %></strong> </cite> said <%= distance_of_time_in_words comment.article.published_at, comment.created_at %> later:
   </p>
   <div>
-  <%= comment.full_html %>
+  <%= html(comment) %>
   </div>
   <% unless comment.published -%>
     <div class="spamwarning">This comment has been flagged for moderator approval.  It won't appear on this blog until the author approves it.</div>
