--- a/themes/passepartout/views/articles/read.rhtml
+++ b/themes/passepartout/views/articles/read.rhtml
@@ -56,7 +56,7 @@
 
 <p class="postmetadata alt">
   <small>
-  <a href="<%= xml_url :action=>'feed', :type=>'article', :format => 'atom10', :id => @article %>" title="Feed">feed for this post</a>
+  <a href="<%= url_for :controller => 'xml', :action=>'feed', :type=>'article', :format => 'atom10', :id => @article %>" title="Feed">feed for this post</a>
 <% if @article.allow_pings? -%>
   <a href="<%= @article.trackback_url %>" >trackback uri</a>
 <% end -%>
