--- a/themes/passepartout/views/articles/_comment_box.rhtml
+++ b/themes/passepartout/views/articles/_comment_box.rhtml
@@ -1,7 +1,7 @@
-<%= form_remote_tag :url => {:action => "comment", :id => @article}, 
-                    :position=> :bottom, 
+<%= form_remote_tag :url => comments_path(@article),
+                    :position=> :bottom,
                     :update => {:success => 'commentList'},
-                    :loading => "loading()", 
+                    :loading => "loading()",
                     :complete => "complete(request)",
                     :failure => "failure(request)",
                     :html => {:id=>"commentform",:class=>"commentform"} %>
@@ -14,19 +14,19 @@
   <a name="respond"></a>
 
 
-      <p><label for="comment_author">Your name:</label>
+      <p><label for="comment_author"><%= _("Your name")%></label>
       <%= text_field "comment", "author", :size => 20 %> <small><%= link_to_function("(leave url/email &#187;)", "Element.toggle('guest_url'); Element.toggle('guest_email')") %></small>
     </p>
     <p id="guest_url" style="display:none;">
-      <label for="comment_url">Your URL:</label>
+      <label for="comment_url"><%= _("Your blog")%></label>
       <%= text_field "comment", "url" %>
     </p>
     <p id="guest_email" style="display:none;">
-      <label for="comment_email">Your email:</label>
+      <label for="comment_email"><%= _("Your email")%></label>
       <%= text_field "comment", "email" %>
     </p>
     <p>
-      <label for="comment_body">Your message</label></p>
+      <label for="comment_body"><%= _("Your message")%></label></p>
       <p>
         <%= text_area "comment", "body" %>
       </p>
@@ -34,8 +34,8 @@
 
 
       <span id="comment_loading" style="display:none;"><%= image_tag "spinner.gif" %></span>
-      <%= markup_help_popup TextFilter.find_by_name(this_blog.comment_text_filter), "Comment Markup Help" %>
-      <a href="#" onclick="new Ajax.Updater('preview', '<%= url_for :action => 'comment_preview' %>',  {asynchronous:true, evalScripts:true, parameters:Form.serialize('commentform'), onComplete:function(request){Element.show('preview')}}); return false;">Preview comment</a>      
+      <%= markup_help_popup TextFilter.find_by_name(this_blog.comment_text_filter), _("Comment Markup Help") %>
+      <a href="#" onclick="new Ajax.Updater('preview', '<%= preview_new_comment_path(@article) %>',  {asynchronous:true, evalScripts:true, parameters:Form.serialize('commentform'), onComplete:function(request){Element.show('preview')}}); return false;"><%= _("Preview comment")%></a>
       <input type="submit" name="submit" id="form-submit-button" value="submit" class="button" />&nbsp;&nbsp;
     </p>
 
