svk merge -r 2773:2779 /typo/mirror/trunk /typo/local/trunk
git-svn-id: file:///home/matijs/.svk/typo/local/trunk@2780 3b2ea118-c802-0410-a64b-92752010ce07

--- a/app/views/admin/categories/_categories.rhtml
+++ b/app/views/admin/categories/_categories.rhtml
@@ -7,7 +7,7 @@
   </tr>
   <% for category in @categories -%>
   <tr <%= alternate_class -%> id="category_<%= category.id -%>">
-    <td><%= category.name %></td>
+    <td><%= link_to category.name, {:controller => 'articles', :action => 'category', :id => category.permalink} %></td>
     <td><%= pluralize(category.articles.size, 'article') %></td>
     <td class="operation"><%= image_tag 'checked.png' %></td>
     <td class="operation"><%= link_to_show category %></td>
