--- a/app/views/admin/feedback/list.rhtml
+++ b/app/views/admin/feedback/list.rhtml
@@ -24,16 +24,16 @@
   <%= hidden_field_tag "search", params[:search]%>
   <%= hidden_field_tag "page", params[:page]%>
 
-  <table>
+  <table cellspacing="1" cellpadding="0">
   <tr>
   	<th><input class="feedback_check" type="checkbox" name="checkall" id="checkall" onclick="check_all(this);"/></th>
-	<th><%= _("Status")%></th>
 	<th><%= _("Type")%></th>
 	<th><%= _("Article")%></th>
     <th><%= _("Author")%></th>
     <th><%= _("Body")%></th>
     <th><%= _("IP")%></th>
     <th><%= _("Posted date")%></th>
+	<th class="action"><%= _("Status")%></th>
     <th colspan="3"><%= _("Action") %></th>
   </tr>
   <%= render :partial => 'item', :collection => @feedback %>
