--- a/app/views/admin/pages/_pages.rhtml
+++ b/app/views/admin/pages/_pages.rhtml
@@ -11,7 +11,8 @@
   <td> <%= link_to_permalink(page,page.title) %></td>
   <td>/pages/<%= page.name %></td>
   <td><%= page.created_at.strftime("%d/%m/%Y at %H:%M") %></td>
-  <td class="operation"><%= link_to image_tag('show.png', :alt => "View article", :title => "Preview article"), {:action => "show", :id => page.id} %></td>
+  <td class="operation"><%= (page.published?) ? image_tag('checked.png', :alt => "online", :title => _("Online")) : image_tag('cancel.png', :alt => "offline", :title => _("Offline")) %></td>
+  <td class="operation"><%= link_to image_tag('show.png', :alt => "View page", :title => "Preview page"), {:action => "show", :id => page.id} %></td>
   <td class="operation"><%= link_to_edit page %></td>
   <td class="operation"><%= link_to_destroy page %></td>    
 </tr>  
