--- a/themes/scribbish/views/articles/_comment_form.rhtml
+++ b/themes/scribbish/views/articles/_comment_form.rhtml
@@ -1,4 +1,4 @@
-<%= form_remote_tag :url      => comments_path(@article)
+<%= form_remote_tag :url      => comments_path(@article),
                     :position => :bottom,
                     :update   => {:success => 'commentList'},
                     :loading  => "loading()",
