--- a/themes/passepartout/views/articles/read.rhtml
+++ b/themes/passepartout/views/articles/read.rhtml
@@ -4,7 +4,7 @@
        xmlns:dc="http://purl.org/dc/elements/1.1/">
 <rdf:Description
     rdf:about=""
-<% if @article.allow_pings? -%>
+<% unless @article.pings_closed? -%>
     trackback:ping="<%= @article.trackback_url %>"
 <% end -%>
     dc:title="<%=h @article.title.gsub(/-+/, '-') %>"
@@ -27,7 +27,12 @@
   <%= article_links @article %>
 </p>
 <% if @article.allow_comments? or @article.published_comments.size > 0 -%>
-  <a name="comments"></a><h4 class="blueblk">Comments</h4>
+  <a name="comments"></a>
+  <% if @article.published_comments.blank? %>
+    <h4 class="blueblk">No comments</h4>
+  <% else %>
+    <h4 class="blueblk">Comments</h4>
+  <% end %>
   <% unless @article.comments_closed? -%>
     <p class="postmetadata alt">
       <small><a href="#respond"><%= _("Leave a response")%></a></small>
@@ -42,25 +47,17 @@
   </ol>
 <% end -%>
 
-<% if @article.allow_pings? -%>
-  <a name="trackbacks"></a><h4 class="blueblk"><%= _("Trackbacks")%></h4>
-  <p>
-    <%= _("Use the following link to trackback from your own site")%>:<br/>
-    <span class="light-bg"><%= @article.trackback_url %></span>
-    </p>
+<% if @article.allow_pings? or @article.published_trackbacks.size > 0 -%>
+  <a name="trackbacks"></a>
+  <% if @article.published_trackbacks.blank? -%>
+    <h4 class="blueblk"><%= _("No trackbacks")%></h4>
+  <% else -%>
+    <h4 class="blueblk"><%= _("Trackbacks")%></h4>
+  <% end -%>
   <%= content_tag(:ol,
         render(:partial => "trackback", :collection => @article.published_trackbacks),
         :id => 'trackbackList', :class => 'trackback-list') unless @article.published_trackbacks.blank? %>
 <% end -%>
-
-<p class="postmetadata alt">
-  <small>
-  <a href="<%= url_for formatted_article_path(@article, 'atom') %>" title="Feed"><%= _("feed for this post")%></a>
-<% if @article.allow_pings? -%>
-  <a href="<%= @article.trackback_url %>" ><%= _("trackback uri")%></a>
-<% end -%>
-  </small>
-</p>
 
 <% unless @article.comments_closed? -%>
   <%= render :partial => 'comment_box' %>
