--- a/themes/passepartout/views/shared/_search.html.erb
+++ b/themes/passepartout/views/shared/_search.html.erb
@@ -7,11 +7,12 @@
       <%= image_tag "spinner.gif", :id => 'search_spinner', :style => 'display:none;' %>
       </p>
     <% end %>
+    <div id="results" class="results"></div>
   <%= observe_field 'q',
                     :url        => { :controller => 'live', :action => 'search' },
                     :frequency  => 1,
                     :loading    => "Element.show('search_spinner')",
                     :complete   => "Element.hide('search_spinner')",
-                    :update     => 'search-results',
+                    :update     => 'results',
                     :with       => "'q=' + encodeURIComponent($F('q'))" %>
 </div>
