Remove use of simple_format This reverts commits a137b958daf8f791e0bd63932dcdb78ef05d3b7b and 10cff9dbaa740a1505697f1c8a32565aa83d8435

--- a/app/views/admin/feedback/_item.html.erb
+++ b/app/views/admin/feedback/_item.html.erb
@@ -7,6 +7,6 @@
     <%=h item.email.to_s.slice(0,40) %>
   </td>
   <td id="feedback_<%=item.id%>">
-    <%=link_to_remote(simple_format(h(truncate(item.body, :length => 100))), :url => { :action => 'preview', :id => item.id })%></td>
+    <%=link_to_remote(h(truncate(item.body, :length => 100)), :url => { :action => 'preview', :id => item.id })%></td>
   <td><%=h item.ip %></td>
 </tr>
