--- a/themes/scribbish/views/articles/_article.html.erb
+++ b/themes/scribbish/views/articles/_article.html.erb
@@ -10,14 +10,14 @@
   </p>
 
   <div class="content">
-    <%= simple_format article.html(:body) %>
+    <%= article.html(:body) %>
 
     <% if article.extended? -%>
       <div class="extended">
         <% if controller.action_name == 'index' -%>
           <p><%= link_to_permalink article, _("Continue reading...") %></p>
         <% else -%>
-          <%= simple_format article.html(:extended) %>
+          <%= article.html(:extended) %>
         <% end -%>
       </div>
     <% end -%>
