--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,4 +1,4 @@
 <h2><%= link_to_permalink article,article.title %></h2>
 <p class="auth"><%= _("Posted by")%> <%= author_link(article) %>
 <%= js_distance_of_time_in_words_to_now article.published_at %></p>
-<%= simple_format(html(article, :body)) %>
+<%= html(article, :body) %>
