--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -3,7 +3,7 @@
   <a name="comment-<%= comment.id %>"></a>
   <%= gravatar_tag(comment.email) if this_blog.use_gravatar and comment.email %>
   <cite><strong><%= link_to_unless(comment.url.blank?, h(comment.author), comment.url) %></strong> </cite> <%= _("said")%> <%= distance_of_time_in_words comment.article.published_at, comment.created_at %> later:<br />
-  <%= simple_format comment.generate_html(:body) %>
+  <%= comment.generate_html(:body) %>
   <% unless comment.published -%>
     <div class="spamwarning"><%= _("This comment has been flagged for moderator approval.  It won't appear on this blog until the author approves it")%>.</div>
   <% end -%>
