--- a/themes/dirtylicious/views/articles/comment_preview.html.erb
+++ b/themes/dirtylicious/views/articles/comment_preview.html.erb
@@ -5,6 +5,6 @@
     <abbr>is about to say</abbr>
   </div>
   <div class="content">
-    <%= simple_format @comment.html %>
+    <%= @comment.html %>
   </div>
 </div>
