--- a/themes/passepartout/views/articles/_comment_box.html.erb
+++ b/themes/passepartout/views/articles/_comment_box.html.erb
@@ -1,11 +1,10 @@
-<%= form_remote_tag :url => comments_path(@article),
+<% form_remote_tag :url => @article.comment_url,
                     :position=> :bottom,
                     :update => {:success => 'commentList'},
                     :loading => "loading()",
                     :complete => "complete(request)",
                     :failure => "failure(request)",
-                    :html => {:id=>"commentform",:class=>"commentform"} %>
-
+                    :html => {:id=>"commentform",:class=>"commentform"} do %>
 
 <div class="comment-box">
   <div id="errors"></div>
@@ -35,10 +34,10 @@
 
       <span id="comment_loading" style="display:none;"><%= image_tag "spinner.gif" %></span>
       <%= markup_help_popup TextFilter.find_by_name(this_blog.comment_text_filter), _("Comment Markup Help") %>
-      <a href="#" onclick="new Ajax.Updater('preview', '<%= preview_new_comment_path(@article) %>',  {asynchronous:true, evalScripts:true, parameters:Form.serialize('commentform'), onComplete:function(request){Element.show('preview')}}); return false;"><%= _("Preview comment")%></a>
+      <a href="#" onclick="new Ajax.Updater('preview', '<%= @article.preview_comment_url %>',  {asynchronous:true, evalScripts:true, parameters:Form.serialize('commentform'), onComplete:function(request){Element.show('preview')}}); return false;"><%= _("Preview comment")%></a>
       <input type="submit" name="submit" id="form-submit-button" value="submit" class="button" />&nbsp;&nbsp;
     </p>
 
 
 </div>
-<%= end_form_tag %>
+<% end %>
