Fix p>div nesting; Copyright message extended to 2010.

--- a/themes/passepartout/views/articles/_frontbar.html.erb
+++ b/themes/passepartout/views/articles/_frontbar.html.erb
@@ -5,9 +5,9 @@
 <% end -%>
 </ul>
 
-<p id="pagination">You can read
+<div class="pagination">You can read
 	<%= link_to 'the rest of my blog here', { :controller => '/articles' } %>.
-</p>
+</div>
 
 <h3>Site</h3>
 <ul class="navigation">
